Add data layer, list books on main page from json file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   hooks_riverpod: ^2.5.1
   flutter_hooks: ^0.20.5
+  bible_repository:
+    path: packages/bible_repository
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +63,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - lib/assets/kjv.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
