--- a/packages/bible_repository/pubspec.yaml
+++ b/packages/bible_repository/pubspec.yaml
@@ -1,16 +1,25 @@
 name: bible_repository
 description: Dart package which manages the bible data domain.
 publish_to: none
+version: 0.0.1
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: '>=3.2.4 <4.0.0'
+  flutter: ">=1.17.0"
 
 dependencies:
+  flutter:
+    sdk: flutter
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   riverpod: ^2.4.1
 
 dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^2.0.0
   build_runner: ^2.4.8
   freezed: ^2.4.7
   json_serializable: ^6.7.1
+
+flutter:
