--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   bible_repository:
     path: packages/bible_repository
   go_router: ^13.2.2
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +54,8 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   custom_lint:
   riverpod_lint: ^2.3.10
+  build_runner: ^2.4.9
+  freezed: ^2.5.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
