--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
     path: packages/bible_repository
   go_router: ^13.2.2
   freezed_annotation: ^2.4.1
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
