Bible repository refactoring

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - lib/assets/kjv.json
+    - lib/assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
